# brush

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  brush_blueprint.rbl  build.rs  deny.toml  index.html
.github/workflows/: ci.yml
.zed/: tasks.json
crates/brush/: Cargo.toml  Trunk.toml  build.rs  index.html  manifest.yaml
crates/brush-android/: Cargo.toml  README.md
crates/brush-android/app/: build.gradle
crates/brush-android/app/src/main/: AndroidManifest.xml
crates/brush-android/app/src/main/java/com/splats/app/: FilePicker.java  MainActivity.java
crates/brush-android/app/src/main/res/values/: themes.xml
crates/brush-android/app/src/main/res/values-night/: themes.xml
crates/brush-android/src/: android_file_picker.rs  lib.rs
crates/brush-cli/: Cargo.toml
crates/brush-cli/src/: main.rs
crates/brush-dataset/: Cargo.toml
crates/brush-dataset/src/: colmap.rs  colmap_read_model.rs  lib.rs  nerf_synthetic.rs  scene.rs  scene_batch.rs  scene_loader.rs  splat_export.rs  splat_import.rs  zip.rs
crates/brush-dataset/src/formats/: colmap.rs  mod.rs  nerf_synthetic.rs
crates/brush-desktop/: Cargo.toml  index.html
crates/brush-desktop/src/: main.rs
crates/brush-kernel/: Cargo.toml  build.rs
crates/brush-kernel/src/: lib.rs
crates/brush-kernel/src/shaders/: wg.wgsl
crates/brush-prefix-sum/: Cargo.toml  build.rs
crates/brush-prefix-sum/src/: lib.rs
crates/brush-prefix-sum/src/shaders/: mod.rs  prefix_sum_helpers.wgsl
crates/brush-render/: Cargo.toml  build.rs
crates/brush-render/benches/: render_bench.rs
crates/brush-render/src/: bounding_box.rs  camera.rs  dim_check.rs  gaussian_splats.rs  kernels.rs  lib.rs  render.rs  safetensor_utils.rs  sync_span.rs
crates/brush-render/src/shaders/: arrange.wgsl  gather_grads.wgsl  get_tile_bin_edges.wgsl  grads.wgsl  helpers.wgsl  map_gaussian_to_intersects.wgsl  mod.rs  project_backwards.wgsl  project_forward.wgsl  project_visible.wgsl  rasterize.wgsl  rasterize_backwards.wgsl
crates/brush-render/test_cases/: NerfStudioRefGen.ipynb  basic_case.safetensors  tiny_case.safetensors
crates/brush-rerun/: Cargo.toml
crates/brush-rerun/src/: lib.rs
crates/brush-sort/: Cargo.toml  build.rs
crates/brush-sort/src/: lib.rs
crates/brush-sort/src/shaders/: mod.rs  sort_count.wgsl  sort_reduce.wgsl  sort_scan.wgsl  sort_scan_add.wgsl  sort_scatter.wgsl  sorting.wgsl
crates/brush-train/: Cargo.toml
crates/brush-train/src/: eval.rs  image.rs  lib.rs  scene.rs  ssim.rs  train.rs
crates/brush-ui/: Cargo.toml
crates/brush-ui/src/: burn_texture.rs  lib.rs
crates/brush-viewer/: Cargo.toml  index.html
crates/brush-viewer/src/: async_lib.rs  burn_texture.rs  dataset_readers.rs  gaussian_splats.rs  lib.rs  orbit_controls.rs  scene.rs  splat_import.rs  splat_view.rs  timeout_future.rs  train.rs  train_loop.rs  utils.rs  viewer.rs  visualize.rs  wgpu_config.rs
crates/brush-viewer/src/panels/: datasets.rs  load_data.rs  mod.rs  presets.rs  rerun.rs  scene.rs  stats.rs  tracing_debug.rs  viewpoints.rs
crates/brush-wgsl/: Cargo.toml
crates/brush-wgsl/src/: codewriter.rs  lib.rs
crates/brush/src/: burn_texture.rs  dataset_readers.rs  gaussian_splats.rs  lib.rs  main.rs  orbit_controls.rs  scene.rs  splat_import.rs  ssim.rs  train.rs  utils.rs  viewer.rs  wgpu_config.rs
crates/brush/src/splat_render/: dim_check.rs  kernels.rs  mod.rs  prefix_sum.rs  render.rs
crates/brush/src/splat_render/shaders/: mod.rs  project_backwards.wgsl
crates/colmap-reader/: Cargo.toml  README.md
crates/colmap-reader/src/: lib.rs
crates/rrfd/: Cargo.toml  README.md
crates/rrfd/src/: android.rs  lib.rs
crates/sync-span/src/: lib.rs
crates/train-2d/: Cargo.toml
crates/train-2d/src/: main.rs
shaders/: get_tile_bin_edges.wgsl  helpers.wgsl  map_gaussian_to_intersects.wgsl  prefix_sum.wgsl  prefix_sum_scan_sums.wgsl  project_backwards.wgsl  project_forward.wgsl  rasterize.wgsl  rasterize_backwards.wgsl  render_2d_gaussians.wgsl  zero.wgsl
shaders/scan/: prefix_sum_helpers.wgsl  prefix_sum_scan.wgsl  prefix_sum_scan_sums.wgsl
shaders/sort/: sort_count.wgsl  sort_downsweep.wgsl  sort_multisplit.wgsl  sort_reduce.wgsl  sort_scan.wgsl  sort_scan_add.wgsl  sort_scatter.wgsl  sort_upsweep.wgsl  sorting.wgsl  wave.wgsl
src/: camera.rs  dataset_readers.rs  gaussian_splats.rs  kernel.wgsl  loss_utils.rs  main.rs  main_old.rs  orbit_controls.rs  renderer.rs  scene.rs  spherical_harmonics.rs  splat_import.rs  ssim.rs  train.rs  utils.rs  viewer.rs
src/diff-guassian-rasterization/: backward.wgsl  forward.wgsl  rasterizer.wgsl
src/splat_render/: dim_check.rs  forward.wgsl  kernels.rs  mod.rs  prefix_sum.rs  project_gaussians.rs  radix_sort.rs  render.rs  render_2d_gaussians.rs  sync_span.rs
src/splat_render/shaders/: get_tile_bin_edges.wgsl  helpers.wgsl  map_gaussian_to_intersects.wgsl  map_tile_bounds.wgsl  map_tile_skipset.wgsl  mod.rs  project_backwards.wgsl  project_forward.wgsl  rasterize.wgsl  rasterize_backwards.wgsl  rasterize_skipset.wgsl
src/splat_render/shaders/scan/: prefix_sum_scan_sums.wgsl
src/splat_render/shaders/sort/: sort_count.wgsl  sort_reduce.wgsl  sort_scan.wgsl  sort_scan_add.wgsl  sort_scatter.wgsl  sorting.wgsl
test_cases/: NerfStudioRefGen.ipynb
