[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["crates/*"]
default-members = ["crates/brush-desktop"]

[workspace.package]
edition = "2021"
version = "0.1.0"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
glam = "0.28"

burn = { git = "https://github.com/tracel-ai/burn", features = [
    'wgpu',
    'autodiff',
    'template',
    "std",
], default-features = false }
burn-jit = { git = "https://github.com/tracel-ai/burn", features = [
    "autotune",
], default-features = false }
burn-wgpu = { git = "https://github.com/tracel-ai/burn", default-features = false }
burn-fusion = { git = "https://github.com/tracel-ai/burn", default-features = false }

bytemuck = "1.15"
ndarray = "0.15"

image = { version = "0.25", default-features = false, features = [
    'png',
    'webp',
    "jpeg",
] }

serde = "1.0"
serde_json = "1.0"
rand = "0.8.5"
anyhow = "1.0.81"
wgpu = { version = "22.0" }
naga_oil = "0.15"
naga = "22.1.0"
running-average = "0.1.0"
ply-rs.git = "https://github.com/ArthurBrussee/ply-rs.git"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
egui = "0.28.1"
eframe = { version = "0.28.1", default-features = false, features = [
    "wgpu",
    "android-game-activity",
] }

assert_approx_eq = "1.1.0"
safetensors = "0.4.3"

log = "0.4.22"

# Build dependencies.
thiserror = "*"

rerun = { version = "0.18.2", default-features = false, features = [
    'sdk',
    'glam',
] }
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
wasm-bindgen = "=0.2.92"

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui.git", rev = "e9522cf" }
eframe = { git = "https://github.com/emilk/egui.git", rev = "e9522cf" }

[profile.dev]
opt-level = 0
debug = true

# Optimize all dependencies even in debug builds (does not affect workspace packages):
[profile.dev.package."*"]
opt-level = 1
debug = true

[profile.release]
# debug = true # good for profilers
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).
