[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/brush-desktop"]

[workspace.package]
edition = "2021"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"

[workspace.dependencies]
glam = "0.28"
bytemuck = "1.15"
byteorder = "1.5.0"
image = { version = "0.25", default-features = false, features = [
    'png',
    'webp',
    "jpeg",
] }

serde = "1.0"
serde_json = "1.0"
rand = "0.8.5"
anyhow = "1.0.81"
ply-rs.git = "https://github.com/ArthurBrussee/ply-rs.git"
tracing = "0.1.40"
tracing-tracy = "0.11.0"
tracing-subscriber = "0.3.18"
wasm-bindgen-futures = "0.4.42"
web-time = "1.1.0"
futures-lite = "2.3.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }

tracing-wasm = "0.2.1"
async-fn-stream = "0.2.2"
async-channel = "2.3.1"

miette = { version = "7.2.0", features = ["fancy"] }
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"

assert_approx_eq = "1.1.0"
safetensors = "0.4.3"
log = "0.4.22"
wasm-bindgen = "0.2.92"
wgpu = "22.1.0"
naga = "22.1.0"
naga_oil = "0.15"

# Various burn packages.
burn = { git = "https://github.com/tracel-ai/burn", features = [
    'wgpu',
    'autodiff',
    'template',
    'autotune',
    "std",
] }
burn-jit = { git = "https://github.com/tracel-ai/burn" }
burn-wgpu = { git = "https://github.com/tracel-ai/burn", features = [
    "exclusive-memory-only",
] }

# Rerun currently has to be at head to be compatible with other egui/eframe. Once version 0.19
# is released this requirement should go away.
egui = { version = "0.29.0" }
egui_extras = { version = "0.29.0" }
eframe = { version = "0.29.0", default-features = false, features = [
    "wgpu",
    "android-game-activity",
] }

# Need rerun at head as it unlocks some dependencies for the SDK. Once 0.19 is out just use that.
rerun = { git = "https://github.com/rerun-io/rerun", default-features = false, features = [
    'sdk',
    'glam',
    'image',
] }

# Build dependencies.
thiserror = "*"
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }

web-sys = "0.3.70"
wasm-logger = "0.2.0"


[patch."https://github.com/tracel-ai/burn"]
# Uncomment this to use local burn.
# burn = { path = "../burn/crates/burn" }
# burn-jit = { path = "../burn/crates/burn-jit" }
# burn-wgpu = { path = "../burn/crates/burn-wgpu" }

# [patch."https://github.com/tracel-ai/cubecl"]
# # Uncomment this to use local burn.
# cubecl = { path = "../cubecl/crates/cubecl" }
# cubecl-common = { path = "../cubecl/crates/cubecl-common" }

[patch.crates-io]
# Need to duplicate this patch from rerun for now.
re_mp4 = { git = "https://github.com/rerun-io/re_mp4", rev = "8614aae24a7a39a5e7de615d83dbcbfadde7f606" } # main 2024-10-08

# egui = { git = "https://github.com/emilk/egui" }
# egui_extras = { git = "https://github.com/emilk/egui" }
# eframe = { git = "https://github.com/emilk/egui" }

# Overrides to use wgpu branch with float atomics.
wgpu = { git = "https://github.com/ArthurBrussee/wgpu", branch = "flt-atom" }
naga = { git = "https://github.com/ArthurBrussee/wgpu", branch = "flt-atom" }

[profile.dev]
opt-level = 0
debug = true

# Optimize all dependencies even in debug builds (does not affect workspace packages):
[profile.dev.package."*"]
opt-level = 1
debug = true

[profile.release]
# debug = true # good for profilers
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).
