[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/brush-desktop"]

[workspace.package]
edition = "2021"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"

[workspace.dependencies]
glam = { version = "0.28", features = ["serde"] }
bytemuck = "1.15"
byteorder = "1.5.0"
image = { version = "0.25", default-features = false, features = [
    'png',
    'webp',
    "jpeg",
] }

serde = { version = "1.0.210", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0.128", default-features = false }

rand = "0.8.5"
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-tracy = "0.11.0"
tracing-subscriber = "0.3.18"

async-std = "1.13.0"

web-time = "1.1.0"

tracing-wasm = "0.2.1"
async-fn-stream = "0.2.2"

miette = { version = "7.2.0", features = ["fancy"] }
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"

assert_approx_eq = "1.1.0"
safetensors = "0.4.3"
log = "0.4.22"
wasm-bindgen = "0.2.92"
wgpu = "22.1.0"
naga = "22.1.0"
naga_oil = "0.15"

env_logger = "0.11.5"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }

# The default ply-rs has a really bad slowdown. Use a forked version which is a good amount faster.
ply-rs.git = "https://github.com/ArthurBrussee/ply-rs.git"

# Various burn packages. Currently need to use burn at head.
burn = { git = "https://github.com/tracel-ai/burn", features = [
    'wgpu',
    'autodiff',
    'template',
    'autotune',
    "std",
] }
burn-jit = { git = "https://github.com/tracel-ai/burn" }
burn-wgpu = { git = "https://github.com/tracel-ai/burn", features = [
    "exclusive-memory-only",
] }

egui = { version = "0.29.0" }
eframe = { version = "0.29.0", default-features = false, features = [
    "wgpu",
    "android-game-activity",
] }
egui_tiles.version = "0.10.1"

# Rerun has to be >0.19.0 to be compatible with egui 0.29.0.
rerun = { version = "0.19.0-alpha.11", default-features = false, features = [
    'sdk',
    'glam',
    'image',
] }

# Build dependencies.
thiserror = "*"
web-sys = "0.3.70"
wasm-logger = "0.2.0"
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }

[patch."https://github.com/tracel-ai/burn"]
# Uncomment this to use local burn.
# burn = { path = "../burn/crates/burn" }
# burn-jit = { path = "../burn/crates/burn-jit" }
# burn-wgpu = { path = "../burn/crates/burn-wgpu" }

[patch."https://github.com/tracel-ai/cubecl"]
cubecl = { path = "../cubecl/crates/cubecl" }
cubecl-common = { path = "../cubecl/crates/cubecl-common" }

[patch.crates-io]
# Override wgpu branch to force branch that includes float atomics.
wgpu = { git = "https://github.com/ArthurBrussee/wgpu", branch = "flt-atom" }
naga = { git = "https://github.com/ArthurBrussee/wgpu", branch = "flt-atom" }

[profile.dev]
opt-level = 0
debug = true

# Optimize all dependencies even in debug builds (does not affect workspace packages):
[profile.dev.package."*"]
opt-level = 1
debug = true

[profile.release]
# debug = true # good for profilers
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).
