[package]
name = "brush-cli"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
brush-train.path = "../brush-train"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }