[package]
name = "brush-dataset"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"
brush-train.path = "../brush-train"
colmap-reader.path = "../colmap-reader"
anyhow.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
glam.workspace = true
burn.workspace = true
tracing.workspace = true
log.workspace = true
ply-rs.workspace = true
web-time.workspace = true

async-std.workspace = true
async-fn-stream.workspace = true
