[package]
name = "brush-desktop"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
pollster = "0.2"
egui.workspace = true
eframe.workspace = true
brush-viewer.path = "../brush-viewer"
tracing-tracy = { version = "0.11.0", optional = true }

[features]
tracy = ["dep:tracing-tracy"]
