[package]
name = "brush-desktop"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
egui.workspace = true
eframe.workspace = true
brush-viewer.path = "../brush-viewer"

[features]
tracy = ["brush-viewer/tracy"]
rerun = ["brush-viewer/rerun"]
