[package]
name = "brush-desktop"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "brush_bin"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
egui.workspace = true
eframe.workspace = true
brush-viewer.path = "../brush-viewer"
brush-train.path = "../brush-train"
log.workspace = true
env_logger.workspace = true
parking_lot.workspace = true
async-std.workspace = true

# Default to wayland on linux. Change this to x11 if needed.
# this perhaps could use a feature on our side as well,
# so you could run with cargo run --no-default-features --features=11
winit = { version = "0.30", features = ["default"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
web-sys.workspace = true
wasm-logger.workspace = true

[features]
tracy = ["brush-viewer/tracy"]
