[package]
name = "brush-kernel"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
burn.workspace = true
burn-compute.workspace = true
burn-cube.workspace = true
burn-jit.workspace = true
bytemuck.workspace = true
glam.workspace = true
naga_oil.workspace = true
tracing.workspace = true
wgpu.workspace = true
