[package]
name = "brush-kernel"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
burn.workspace = true
burn-compute.workspace = true
burn-cube.workspace = true
burn-jit.workspace = true
bytemuck.workspace = true
glam.workspace = true
tracing.workspace = true
naga_oil.workspace = true
naga.workspace = true
