[package]
name = "brush-train"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"
anyhow.workspace = true
image.workspace = true
glam.workspace = true
rand.workspace = true
tracing.workspace = true
parking_lot.workspace = true
log.workspace = true
async-std.workspace = true

burn.workspace = true
burn-wgpu.workspace = true
