[package]
name = "brush-viewer"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
# Brush deps.
brush-render.path = "../brush-render"
brush-train.path = "../brush-train"
brush-dataset.path = "../brush-dataset"

# Workspace deps.
glam.workspace = true
burn.workspace = true
burn-wgpu.workspace = true

image.workspace = true
anyhow.workspace = true
eframe.workspace = true
egui.workspace = true
tracing.workspace = true
wgpu.workspace = true
ply-rs.workspace = true
tracing-subscriber = "0.3.18"

tracing-tracy = { version = "0.11.0", optional = true }
rerun = { workspace = true, optional = true }

wasm-bindgen-futures = "0.4.42"
web-time = "1.1.0"
futures-lite = "2.3.0"
pollster = "0.3.0"

tracing-wasm = "0.2.1"
async-stream = "0.3.5"
async-channel = "2.3.1"
rrfd.path = "../rrfd"
sync-span.path = "../sync-span"

cfg-if = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen.workspace = true
console_error_panic_hook = "0.1.7"

[features]
tracy = ["dep:tracing-tracy"]
rerun = ["dep:rerun"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = false
