[package]
name = "brush-viewer"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
# Brush deps.
brush-render.path = "../brush-render"
brush-train.path = "../brush-train"
brush-dataset.path = "../brush-dataset"
brush-kernel.path = "../brush-kernel"
brush-ui.path = "../brush-ui"

# Workspace deps.
glam.workspace = true
burn.workspace = true
burn-wgpu.workspace = true
burn-jit.workspace = true

image.workspace = true
anyhow.workspace = true
eframe.workspace = true
web-sys.workspace = true
egui.workspace = true
egui_tiles.workspace = true
tracing.workspace = true
wgpu.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true

web-time.workspace = true

log.workspace = true
gloo-timers.workspace = true

tracing-tracy = { workspace = true, optional = true }
cfg-if.workspace = true

rrfd.path = "../rrfd"
sync-span.path = "../sync-span"

zip.workspace = true
async-fn-stream.workspace = true
async-std.workspace = true

parking_lot.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rerun.workspace = true
brush-rerun.path = "../brush-rerun"

[target.'cfg(target_family = "wasm")'.dependencies]
tracing-wasm.workspace = true
web-sys.workspace = true

[features]
tracy = ["dep:tracing-tracy", "tracing"]
tracing = []

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = false
