[package]
name = "brush"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Brush deps.
brush-sort.path = "../brush-sort"
brush-prefix-sum.path = "../brush-prefix-sum"
brush-render.path = "../brush-render"
brush-kernel.path = "../brush-kernel"

# Workspace deps.
glam = { workspace = true }
image = { workspace = true }

burn = { workspace = true }


# Optional dependencies (can't live in the workspace root).
rerun = { version = "0.16", default-features = false, features = [
    'sdk',
    'glam',
], optional = true }

tracing-tracy = { version = "0.11.0", optional = true }
anyhow.workspace = true
ndarray.workspace = true
serde_json.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
tracing-subscriber = "0.3.18"
tracing.workspace = true
wgpu.workspace = true
ply-rs.workspace = true
rand.workspace = true
burn-compute.workspace = true
burn-wgpu.workspace = true

[features]
tracy = ["dep:tracing-tracy"]
sync_tracy = []
rerun = ["dep:rerun"]
default = ["tracy", "rerun"]
