[package]
name = "brush"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Brush deps.
brush-sort.path = "../brush-sort"
brush-prefix-sum.path = "../brush-prefix-sum"
brush-render.path = "../brush-render"
brush-kernel.path = "../brush-kernel"

# Workspace deps.
glam.workspace = true
burn.workspace = true
burn-compute.workspace = true
burn-wgpu.workspace = true

image.workspace = true

# Optional dependencies (can't live in the workspace root).
rerun = { version = "0.16", default-features = false, features = [
    'sdk',
    'glam',
], optional = true }

tracing-tracy = { version = "0.11.0", optional = true }
anyhow.workspace = true
ndarray.workspace = true
serde_json.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
tracing-subscriber = "0.3.18"
tracing.workspace = true
wgpu.workspace = true
ply-rs.workspace = true
rand.workspace = true

wasm-bindgen-futures = "0.4.42"
web-time = "1.1.0"
futures-lite = "2.3.0"
async-executor = "1.12.0"
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"
pollster = "0.3.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen = "0.2.92"
rfd = "0.14.1"
async_zip = { version = "0.0.17", features = ["full-wasm"] }

[features]
tracy = ["dep:tracing-tracy"]
rerun = ["dep:rerun"]
