[package]
name = "brush"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Brush deps.
brush-sort.path = "../brush-sort"
brush-prefix-sum.path = "../brush-prefix-sum"
brush-render.path = "../brush-render"
brush-kernel.path = "../brush-kernel"

# Workspace deps.
glam.workspace = true
burn.workspace = true
burn-wgpu.workspace = true

image.workspace = true

android_logger = "0.14.1"
winit = "*"               # Just match the winit version in egui.

# Optional dependencies (can't live in the workspace root).
rerun = { version = "0.16", default-features = false, features = [
    'sdk',
    'glam',
], optional = true }

anyhow.workspace = true
ndarray.workspace = true
serde_json.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
tracing.workspace = true
wgpu.workspace = true
ply-rs.workspace = true
rand.workspace = true

tracing-subscriber = "0.3.18"
tracing-tracy = { version = "0.11.0", optional = true }

wasm-bindgen-futures = "0.4.42"
web-time = "1.1.0"
futures-lite = "2.3.0"
async-executor = "1.12.0"
pollster = "0.3.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen = "0.2.92"
# rfd = "0.14.1"
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
async-stream = "0.3.5"
async-channel = "2.3.1"
ureq = "2.10.0"

[features]
tracy = ["dep:tracing-tracy"]
rerun = ["dep:rerun"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = false
